@@ -4,71 +4,71 @@ password=${org.cougaar.configuration.password}
 
 queryMaxExpt=\
  SELECT MAX(EXPT_ID) \
-   FROM V4_EXPT_EXPERIMENT \
+   FROM EXPT_EXPERIMENT \
   WHERE EXPT_ID LIKE 'REGRESSION-____'
 
 insertExpt=\
- INSERT INTO V4_EXPT_EXPERIMENT (EXPT_ID, DESCRIPTION) \
+ INSERT INTO EXPT_EXPERIMENT (EXPT_ID, DESCRIPTION) \
  VALUES (':expt_id', ':description')
 
 queryMaxTrial=\
  SELECT MAX(TRIAL_ID) \
-   FROM V4_EXPT_TRIAL \
+   FROM EXPT_TRIAL \
   WHERE TRIAL_ID like 'REGRESSION-____'
 
 insertTrial=\
- INSERT INTO V4_EXPT_TRIAL (TRIAL_ID, EXPT_ID, DESCRIPTION) \
+ INSERT INTO EXPT_TRIAL (TRIAL_ID, EXPT_ID, DESCRIPTION) \
  VALUES (':trial_id', ':expt_id', ':description')
 
 queryMaxAssembly=\
  SELECT MAX(ASSEMBLY_ID) \
-   FROM V4_ASB_ASSEMBLY \
+   FROM ASB_ASSEMBLY \
   WHERE ASSEMBLY_TYPE = ':assembly_type'
 
 insertAssembly=\
- INSERT INTO V4_ASB_ASSEMBLY (ASSEMBLY_ID, ASSEMBLY_TYPE, DESCRIPTION) \
+ INSERT INTO ASB_ASSEMBLY (ASSEMBLY_ID, ASSEMBLY_TYPE, DESCRIPTION) \
  VALUES (':assembly_id', ':assembly_type', ':description')
 
 insertTrialAssembly=\
- INSERT INTO V4_EXPT_TRIAL_ASSEMBLY (EXPT_ID, TRIAL_ID, ASSEMBLY_ID, DESCRIPTION) \
+ INSERT INTO EXPT_TRIAL_ASSEMBLY (EXPT_ID, TRIAL_ID, ASSEMBLY_ID, DESCRIPTION) \
  VALUES (':expt_id', ':trial_id', ':assembly_id', ':description')
 
 insertLibComponent=\
- INSERT INTO V4_LIB_COMPONENT \
+ INSERT INTO LIB_COMPONENT \
    (COMPONENT_LIB_ID, COMPONENT_TYPE, COMPONENT_CLASS, INSERTION_POINT, DESCRIPTION) \
  VALUES \
    (':component_lib_id', ':component_type', ':component_class', ':insertion_point', ':description')
 
 queryLibComponent=\
  SELECT COMPONENT_LIB_ID, COMPONENT_TYPE, COMPONENT_CLASS, INSERTION_POINT, DESCRIPTION \
-   FROM V4_LIB_COMPONENT \
+   FROM LIB_COMPONENT \
   WHERE COMPONENT_LIB_ID = ':component_lib_id'
 
 deleteLibComponent=\
- DELETE FROM V4_LIB_COMPONENT \
+ DELETE FROM LIB_COMPONENT \
   WHERE COMPONENT_LIB_ID = ':component_lib_id'
 
 deleteAlibComponent=\
- DELETE FROM V4_ALIB_COMPONENT \
+ DELETE FROM ALIB_COMPONENT \
   WHERE COMPONENT_LIB_ID = ':component_lib_id'
 
 queryTableWithTrialId=\
  SELECT TABLE_NAME FROM USER_TAB_COLUMNS \
   WHERE COLUMN_NAME = 'TRIAL_ID' \
-    AND TABLE_NAME LIKE 'V4_%' \
-    AND TABLE_NAME <> 'V4_EXPT_TRIAL'
+    AND TABLE_NAME LIKE '%' \
+    AND TABLE_NAME <> 'EXPT_TRIAL'
 
 queryTableWithAssemblyId=\
  SELECT TABLE_NAME FROM USER_TAB_COLUMNS \
   WHERE COLUMN_NAME = 'ASSEMBLY_ID' \
-    AND TABLE_NAME LIKE 'V4_%' \
-    AND TABLE_NAME <> 'V4_ASB_ASSEMBLY'
+    AND TABLE_NAME LIKE '%' \
+    AND TABLE_NAME <> 'ASB_ASSEMBLY'
 
 queryTableWithExptId=\
  SELECT TABLE_NAME FROM USER_TAB_COLUMNS \
   WHERE COLUMN_NAME = 'EXPT_ID' \
-    AND TABLE_NAME LIKE 'V4_%' \
-    AND TABLE_NAME <> 'V4_EXPT_EXPERIMENT'
+    AND TABLE_NAME LIKE '%' \
+    AND TABLE_NAME <> 'EXPT_EXPERIMENT'
 
 deleteFromTableWithAssemblyId=\
  DELETE FROM :table \
@@ -84,22 +84,22 @@ deleteFromTableWithExptId=\
 
 queryAllTableColumns=\
  SELECT TABLE_NAME, COLUMN_NAME FROM USER_TAB_COLUMNS \
-  WHERE TABLE_NAME LIKE 'V4_%' \
+  WHERE TABLE_NAME LIKE '%' \
   ORDER BY TABLE_NAME
 
 deleteFromTableInitial=DELETE FROM :table WHERE :column like '%:clean_type%'
 deleteFromTableMore=\ OR :column like ':clean_type%'
 
 deleteAssembly=\
- DELETE FROM V4_EXPT_TRIAL_ASSEMBLY \
+ DELETE FROM EXPT_TRIAL_ASSEMBLY \
   WHERE ASSEMBLY_ID = ':assembly_id'
 
 deleteTrial=\
- DELETE FROM V4_EXPT_TRIAL \
+ DELETE FROM EXPT_TRIAL \
   WHERE TRIAL_ID = ':trial_id'
 
 deleteExpt=\
-  DELETE FROM V4_EXPT_EXPERIMENT \
+  DELETE FROM EXPT_EXPERIMENT \
    WHERE EXPT_ID = ':expt_id'
 
 deleteAllFromTableWithAssemblyId=\
@@ -115,13 +115,13 @@ deleteAllFromTableWithExptId=\
   WHERE EXPT_ID like ':clean_type_%'
 
 deleteAllAssembly=\
- DELETE FROM V4_EXPT_TRIAL_ASSEMBLY \
+ DELETE FROM EXPT_TRIAL_ASSEMBLY \
   WHERE ASSEMBLY_ID like ':clean_type_%'
 
 deleteAllTrial=\
- DELETE FROM V4_EXPT_TRIAL \
+ DELETE FROM EXPT_TRIAL \
   WHERE TRIAL_ID like ':clean_type_%'
 
 deleteAllExpt=\
-  DELETE FROM V4_EXPT_EXPERIMENT \
+  DELETE FROM EXPT_EXPERIMENT \
    WHERE EXPT_ID like ':clean_type_%'
